# open_spiel

./: mcts.out
data/: tic_tac_toe_states.txt
open_spiel/: spiel.cc  spiel.h
open_spiel/algorithms/: CMakeLists.txt  get_all_state_ids.cc  get_all_state_ids.h  mcts.cc  mcts.h  mcts_orig_actions.cc  mcts_test.cc  supergame_minimax.cc  supergame_minimax.h
open_spiel/algorithms/alpha_zero_torch/: alpha_zero.cc  alpha_zero.h  vpevaluator.cc  vpnet.cc
open_spiel/examples/: CMakeLists.txt  alpha_zero_torch_example.cc  alpha_zero_torch_game_example.cc  az_tic_tac_toe_eval_example.cc  az_ttt_eval_legal_moves_all_checkpoints.cc  az_ttt_eval_legal_moves_single_checkpoint.cc  az_ttt_eval_play.cc  az_ttt_eval_play_all_checkpoints.cc  az_ttt_eval_play_single_checkpoint.cc  az_ttt_eval_progress.cc  az_ttt_eval_progress_single_checkpoint.cc  collect_ttt_4x4_states.cc  count_all_ttt_states.cc  evaluate_all_ttt_states.cc  evaluate_ttt_3x3_states.cc  evaluate_ttt_3x3_states_all_checkpoints.cc  evaluate_ttt_4x4_states.cc  example.cc  mcts_example.cc  mcts_ttt_eval.cc  mcts_ttt_eval_legal_moves.cc  mcts_ttt_eval_play.cc  mcts_ttt_eval_set_rand.cc  minimax_ttt_example.cc  state_value_pairs.cc  ttt_state_data_labels.cc
open_spiel/games/: CMakeLists.txt  chess.cc  connect_four.cc  connect_four.h  connect_four_turns.cc  connect_four_turns.h  tic_tac_toe.cc  tic_tac_toe.h  tic_tac_toe_4x4.cc  tic_tac_toe_4x4.h  tic_tac_toe_5x5.cc  tic_tac_toe_5x5.h  tic_tac_toe_dr.cc  tic_tac_toe_dr.h  tic_tac_toe_rand_start.cc  tic_tac_toe_rand_start.h  tic_tac_toe_supergame_A.cc  tic_tac_toe_supergame_A.h  tic_tac_toe_supergame_A_stacked.cc  tic_tac_toe_supergame_A_stacked.h  tic_tac_toe_supergame_B.cc  tic_tac_toe_supergame_B.h  tic_tac_toe_supergame_C.cc  tic_tac_toe_supergame_C.h  tic_tac_toe_supergame_D.cc  tic_tac_toe_supergame_D.h  tic_tac_toe_supergame_E.cc  tic_tac_toe_supergame_E.h  tic_tac_toe_supergame_F.cc  tic_tac_toe_supergame_F.h  tic_tac_toe_supergame_Z.cc  tic_tac_toe_supergame_Z.h  tic_tac_toe_supergame_general.cc  tic_tac_toe_supergame_general.h  tic_tac_toe_turns.cc  tic_tac_toe_turns.h  tic_tac_toe_turns_4x4.cc  tic_tac_toe_turns_4x4.h  tic_tac_toe_turns_5x5.cc  tic_tac_toe_turns_5x5.h
open_spiel/integration_tests/playthroughs/: tic_tac_toe_supergame_A.txt  tic_tac_toe_supergame_B.txt  tic_tac_toe_supergame_C.txt
open_spiel/python/algorithms/alpha_zero/: analysis.py
open_spiel/python/tests/: pyspiel_test.py
open_spiel/scripts/: build_and_run_teststemp.sh  global_variables.sh
